--- a/src/Message/Message.module.css
+++ b/src/Message/Message.module.css
@@ -81,6 +81,15 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #a4907c;
+  cursor: pointer;
+}
+
+a:visited {
+  color: black;
+}
+
 @keyframes MoveUpDown {
   0% {
     bottom: 220px;
