--- a/src/Message/NoChoice.module.css
+++ b/src/Message/NoChoice.module.css
@@ -32,7 +32,7 @@
 
 .noChoice {
   width: 310px;
-  height: 260px;
+  height: 290px;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -53,4 +53,9 @@
   align-items: center;
   flex-direction: column;
   gap: 4px;
+}
+
+.charot {
+  font-size: 0.7rem;
+  text-align: center;
 }
